# cognitive_robot_abstract_machine

./: .coverage  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  README.md  VERSION  demo_pouring_transfer.py  pyproject.toml  scratch.py  test.srdf
doc/: _config.yml  (+4 more)
experiments/: pyproject.toml  requirements.txt
experiments/src/experiments/: experiment_definitions.py  robocasa_kitchen_demo.py
experiments/src/experiments/confidence_aware_eql/: README.md  eql_integration.py  exceptions.py  kitchen_eql_demo.py  registry.py  run.py
experiments/src/experiments/confidence_aware_eql/domains/: __init__.py  _template.py  bathroom.py  kitchen.py
experiments/src/experiments/orm/: ormatic_interface.py
experiments/src/experiments/ormatic_experiments/: reliability.py  scalability.py
experiments/src/experiments/random_events_experiments/: scalability_experiment.py
experiments/src/experiments/sage_10k/: sage10k_actions.py
llmr/: .gitignore  README.md  pyproject.toml
llmr/examples/: 01_pick_up_place_action.ipynb  02_open_action.ipynb  03_close_action.ipynb
llmr/notebooks/: 02_unified_action_pipeline.ipynb  gcs_test.ipynb  reals.ipynb  runners.ipynb
llmr/src/llmr/: __init__.py  _utils.py  backend.py  exceptions.py  execution_loop.py  factory.py  recovery_handler.py  schemas.py  task_decomposer.py  world_setup.py
llmr/src/llmr/adapters/: __init__.py  cram_to_pycram.py  simulation_bridge.py
llmr/src/llmr/bridge/: __init__.py  introspect.py  match_reader.py  world_reader.py
llmr/src/llmr/pipeline/: __init__.py  action_dispatcher.py  action_pipeline.py  clarification.py  entity_grounder.py
llmr/src/llmr/planning/: __init__.py  motion_precondition_planner.py
llmr/src/llmr/pycram_bridge/: __init__.py  adapter.py  introspector.py
llmr/src/llmr/reasoning/: __init__.py  decomposer.py  llm_config.py  slot_filler.py
llmr/src/llmr/resolution/: __init__.py  grounder.py  slot_resolution.py
llmr/src/llmr/schemas/: __init__.py  entities.py  slots.py
llmr/src/llmr/workflows/: _utils.py  llm_configuration.py  utils.py
llmr/src/llmr/world/: __init__.py  grounder.py  serializer.py
physics_simulators/: pyproject.toml
physics_simulators/src/base_simulator/: __init__.py  base_simulator.py
physics_simulators/src/mujoco_simulator/: __init__.py  mujoco_simulator.py
physics_simulators/src/physics_simulators/: __init__.py  base_simulator.py  mujoco_simulator.py
semantic_digital_twin/: pyproject.toml  requirements.txt
semantic_digital_twin/doc/: _toc.yml  soft_robotics.md  style_guide.md  user_guide.md
semantic_digital_twin/examples/: adding_a_new_robot.md  adding_robots.md  building_worlds_with_specifications.md  pcc_test.ipynb  physics_simulators.md  semantic_annotation_factories.md  semantic_annotation_part_whole.md  soft_robotics.ipynb  soft_robotics.md
semantic_digital_twin/resources/collision_configs/: daisy.srdf  garmi.srdf  pr2.srdf  tracy2.srdf  xarm5.srdf
semantic_digital_twin/resources/urdf/: daisy.urdf
semantic_digital_twin/scripts/: generate_orm.py  interactive_marker_demo.py  parse_procthor_files_and_save_to_database.py  parse_procthor_worlds_and_calculate_containment_ratio.py  rerun_distributed_publisher.py  rerun_distributed_viewer.py  robot_semantic_annotation_builder_tool.py  test_notebook_examples.sh
semantic_digital_twin/src/semantic_digital_twin/: __init__.py  _version.py  exceptions.py  testing.py  utils.py  world.py
semantic_digital_twin/src/semantic_digital_twin/adapters/: mjcf.py  mujoco_video_recording.py  multi_sim.py  package_resolver.py  rerun.py  simulator_to_world_state.py  urdf.py  world_entity_kwargs_tracker.py
semantic_digital_twin/src/semantic_digital_twin/api/: specifications.py
semantic_digital_twin/src/semantic_digital_twin/collision_checking/: collision_data.py  collision_detector.py  collision_expressions.py  collision_groups.py  collision_manager.py  collision_matrix.py  collision_rules.py  collision_variable_managers.py  pybullet_collision_detector.py  trimesh_collision_detector.py
semantic_digital_twin/src/semantic_digital_twin/datastructures/: definitions.py  joint_state.py  prefixed_name.py  soft_trunk.py
semantic_digital_twin/src/semantic_digital_twin/orm/: model.py  ormatic_interface.py
semantic_digital_twin/src/semantic_digital_twin/physics/: differential_equation.py  physics_model.py  pouring_equations.py
semantic_digital_twin/src/semantic_digital_twin/pipeline/: __init__.py  gltf_loader.py
semantic_digital_twin/src/semantic_digital_twin/predetermined_maps/: kitchen_environment.py
semantic_digital_twin/src/semantic_digital_twin/reasoning/: bmp_predicates.py  effect_execution_models.py  predicates.py  predicates_base.py  queries.py  robot_predicates.py
semantic_digital_twin/src/semantic_digital_twin/regions/: regions.py
semantic_digital_twin/src/semantic_digital_twin/robots/: abstract_robot.py  armar.py  armar7.py  boxy.py  daisy.py  donbot.py  garmi.py  hsrb.py  icub3.py  justin.py  kevin.py  minimal_robot.py  mmp_dresden.py  panda.py  pr2.py  pr2_with_classes.py  robot_mixins.py  robot_part_mixins.py  robot_parts.py  soft_trunk.py  stretch.py  tiago.py  tracy.py  turtlebot.py  unitree_g1.py  ur5.py  ur5e_controlled.py  xarm5.py
semantic_digital_twin/src/semantic_digital_twin/semantic_annotations/: effects.py  factories.py  mixins.py  natural_language.py  position_descriptions.py  queries.py  semantic_annotations.py  state_manager.py  task_effect_motion.py
semantic_digital_twin/src/semantic_digital_twin/spatial_computations/: forward_kinematics.py  raytracer.py
semantic_digital_twin/src/semantic_digital_twin/spatial_types/: spatial_types.py
semantic_digital_twin/src/semantic_digital_twin/visualization/: mesh_cytoscape_graph_visualizer.py  mesh_three_graph_visualizer.py
semantic_digital_twin/src/semantic_digital_twin/world_description/: connections.py  degree_of_freedom.py  effects.py  geometry.py  graph_of_convex_sets.py  inertial_properties.py  motion.py  motion_presets.py  shape_collection.py  soft_connections.py  world_entity.py  world_modification.py  world_state.py
(+1693 files in other folders)
