[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognitive-robot-abstract-machine"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
description = "Meta-package that wires local subprojects together"
readme = "README.md"
authors = [{ name = "AICOR Institute", email = "you@example.com" }]
# IMPORTANT: Use absolute file URLs for portability
# The names must match each subproject’s [project.name]
#dependencies = [
#  "pycram-robotics @ file:///home/jonas/workspace/cognitive_robot_abstract_machine/pycram",
#  "giskardpy @ file:///home/jonas/workspace/cognitive_robot_abstract_machine/giskardpy",
#  "semantic_digital_twin @ file:///home/jonas/workspace/cognitive_robot_abstract_machine/semantic_digital_twin",
#]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
pycram-robotics = { path = "pycram", develop = true }
giskardpy = { path = "giskardpy", develop = true }
semantic_digital_twin = { path = "semantic_digital_twin", develop = true }
krrood = { path = "krrood", develop = true }
random_events = { path = "random_events", develop = true }
probabilistic_model = { path = "probabilistic_model", develop = true }

# Workspace configuration: install members in editable mode during `uv sync`
[tool.uv.workspace]
members = [
  "pycram",
  "giskardpy",
  "semantic_digital_twin",
  "krrood",
  "random_events",
  "probabilistic_model",
]

# Map distribution names (as declared in each member's [project.name])
# to their workspace implementations. Adjust keys if your subprojects
# use different distribution names.
[tool.uv.sources]
pycram-robotics     = { workspace = true }
giskardpy           = { workspace = true }
semantic-digital-twin = { workspace = true }
krrood              = { workspace = true }
random-events       = { workspace = true }
probabilistic-model = { workspace = true }


[tool.setuptools]
# Make the root distribution package-less (no auto-discovery)
packages = []
