[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "experiments"
description = "Experiment scripts and actions for CRAM."
requires-python = ">=3.10"
license = "LGPL-3.0-only"
dynamic = ["version", "dependencies"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "experiments._version.__version__"}
dependencies = { file = ["requirements.txt"] }
