[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = ["**/*venv/**/*"]

[project]
name = "semantic_digital_twin"
authors = [
    { name="Tom Schierenbeck", email="tom_sch@uni-bremen.de" },

]
description = "A world model that unifies kinematic information and semantic meaning for robotic world representations."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords=["robotics"]
dynamic = ["version", "dependencies"]
license = "LGPL-3.0-only"

[project.urls]
"Source" = 'https://github.com/cram2/semantic_digital_twin'
"Bug Tracker" = 'https://github.com/cram2/semantic_digital_twin/issues'

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["semantic_digital_twin*"]

[tool.setuptools.dynamic]
version = {attr = "semantic_digital_twin._version.__version__"}
dependencies = {file = "requirements.txt"}

[project.optional-dependencies]
gui = [
    "ripple_down_rules[gui]",
]
dev = [
    "pytest>=7.0.0,<8.0.0"
]